engine/scripting/native_api/dse_api.gen.h

DSE_CAPI_GEN void  dse_mesh_collider3d_set_friction(uint32_t e, float v);
/* ---- CharacterController3DComponent ---- */
DSE_CAPI_GEN float dse_character_ctrl3d_get_radius(uint32_t e);
DSE_CAPI_GEN void  dse_character_ctrl3d_set_radius(uint32_t e, float v);
DSE_CAPI_GEN float dse_character_ctrl3d_get_height(uint32_t e);
DSE_CAPI_GEN void  dse_character_ctrl3d_set_height(uint32_t e, float v);
DSE_CAPI_GEN float dse_character_ctrl3d_get_slope_limit(uint32_t e);
DSE_CAPI_GEN void  dse_character_ctrl3d_set_slope_limit(uint32_t e, float v);
DSE_CAPI_GEN float dse_character_ctrl3d_get_step_offset(uint32_t e);
DSE_CAPI_GEN void  dse_character_ctrl3d_set_step_offset(uint32_t e, float v);
DSE_CAPI_GEN float dse_character_ctrl3d_get_skin_width(uint32_t e);
DSE_CAPI_GEN void  dse_character_ctrl3d_set_skin_width(uint32_t e, float v);
DSE_CAPI_GEN float dse_character_ctrl3d_get_min_move_distance(uint32_t e);
DSE_CAPI_GEN void  dse_character_ctrl3d_set_min_move_distance(uint32_t e, float v);
/* ---- Joint3DComponent ---- */
DSE_CAPI_GEN int  dse_joint3d_get_type(uint32_t e);
DSE_CAPI_GEN void dse_joint3d_set_type(uint32_t e, int v);
DSE_CAPI_GEN int  dse_joint3d_get_connected_entity_id(uint32_t e);
DSE_CAPI_GEN void dse_joint3d_set_connected_entity_id(uint32_t e, int v);
DSE_CAPI_GEN void dse_joint3d_get_anchor(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_joint3d_set_anchor(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN void dse_joint3d_get_connected_anchor(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_joint3d_set_connected_anchor(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN void dse_joint3d_get_axis(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_joint3d_set_axis(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN int  dse_joint3d_get_use_limits(uint32_t e);
DSE_CAPI_GEN void dse_joint3d_set_use_limits(uint32_t e, int v);
DSE_CAPI_GEN float dse_joint3d_get_lower_limit(uint32_t e);
DSE_CAPI_GEN void  dse_joint3d_set_lower_limit(uint32_t e, float v);
DSE_CAPI_GEN float dse_joint3d_get_upper_limit(uint32_t e);
DSE_CAPI_GEN void  dse_joint3d_set_upper_limit(uint32_t e, float v);
DSE_CAPI_GEN float dse_joint3d_get_min_distance(uint32_t e);
DSE_CAPI_GEN void  dse_joint3d_set_min_distance(uint32_t e, float v);
DSE_CAPI_GEN float dse_joint3d_get_max_distance(uint32_t e);
DSE_CAPI_GEN void  dse_joint3d_set_max_distance(uint32_t e, float v);
DSE_CAPI_GEN float dse_joint3d_get_spring_stiffness(uint32_t e);
DSE_CAPI_GEN void  dse_joint3d_set_spring_stiffness(uint32_t e, float v);
DSE_CAPI_GEN float dse_joint3d_get_spring_damping(uint32_t e);
DSE_CAPI_GEN void  dse_joint3d_set_spring_damping(uint32_t e, float v);
DSE_CAPI_GEN float dse_joint3d_get_break_force(uint32_t e);
DSE_CAPI_GEN void  dse_joint3d_set_break_force(uint32_t e, float v);
DSE_CAPI_GEN float dse_joint3d_get_break_torque(uint32_t e);
DSE_CAPI_GEN void  dse_joint3d_set_break_torque(uint32_t e, float v);
/* ---- RagdollComponent ---- */
DSE_CAPI_GEN int  dse_ragdoll_get_active(uint32_t e);
DSE_CAPI_GEN void dse_ragdoll_set_active(uint32_t e, int v);
DSE_CAPI_GEN int  dse_ragdoll_get_auto_setup(uint32_t e);
DSE_CAPI_GEN void dse_ragdoll_set_auto_setup(uint32_t e, int v);
DSE_CAPI_GEN float dse_ragdoll_get_total_mass(uint32_t e);
DSE_CAPI_GEN void  dse_ragdoll_set_total_mass(uint32_t e, float v);
DSE_CAPI_GEN float dse_ragdoll_get_joint_stiffness(uint32_t e);
DSE_CAPI_GEN void  dse_ragdoll_set_joint_stiffness(uint32_t e, float v);
DSE_CAPI_GEN float dse_ragdoll_get_joint_damping(uint32_t e);
DSE_CAPI_GEN void  dse_ragdoll_set_joint_damping(uint32_t e, float v);
DSE_CAPI_GEN int  dse_ragdoll_get_collision_layer(uint32_t e);
DSE_CAPI_GEN void dse_ragdoll_set_collision_layer(uint32_t e, int v);
DSE_CAPI_GEN int  dse_ragdoll_get_collision_mask(uint32_t e);
DSE_CAPI_GEN void dse_ragdoll_set_collision_mask(uint32_t e, int v);
/* ---- SoftBodyComponent ---- */
DSE_CAPI_GEN int  dse_soft_body_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_soft_body_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_soft_body_get_stiffness(uint32_t e);
DSE_CAPI_GEN void  dse_soft_body_set_stiffness(uint32_t e, float v);
DSE_CAPI_GEN int  dse_soft_body_get_solver_iterations(uint32_t e);
DSE_CAPI_GEN void dse_soft_body_set_solver_iterations(uint32_t e, int v);
DSE_CAPI_GEN float dse_soft_body_get_damping(uint32_t e);
DSE_CAPI_GEN void  dse_soft_body_set_damping(uint32_t e, float v);
DSE_CAPI_GEN int  dse_soft_body_get_use_gravity(uint32_t e);
DSE_CAPI_GEN void dse_soft_body_set_use_gravity(uint32_t e, int v);
DSE_CAPI_GEN float dse_soft_body_get_gravity_scale(uint32_t e);
DSE_CAPI_GEN void  dse_soft_body_set_gravity_scale(uint32_t e, float v);
DSE_CAPI_GEN float dse_soft_body_get_volume_stiffness(uint32_t e);
DSE_CAPI_GEN void  dse_soft_body_set_volume_stiffness(uint32_t e, float v);
/* ---- VehicleComponent ---- */
DSE_CAPI_GEN int  dse_vehicle_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_vehicle_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_vehicle_get_max_engine_force(uint32_t e);
DSE_CAPI_GEN void  dse_vehicle_set_max_engine_force(uint32_t e, float v);
DSE_CAPI_GEN float dse_vehicle_get_max_brake_force(uint32_t e);
DSE_CAPI_GEN void  dse_vehicle_set_max_brake_force(uint32_t e, float v);
DSE_CAPI_GEN float dse_vehicle_get_max_steer_angle(uint32_t e);
DSE_CAPI_GEN void  dse_vehicle_set_max_steer_angle(uint32_t e, float v);
/* ---- RopeComponent ---- */
DSE_CAPI_GEN int  dse_rope_get_enabled(uint32_t e);