GameScripts/DSEngine.Runtime/Generated/Native.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_set_friction")]
    internal static partial void dse_mesh_collider3d_set_friction(uint e, float v);

    // ---- CharacterController3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_get_radius")]
    internal static partial float dse_character_ctrl3d_get_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_set_radius")]
    internal static partial void dse_character_ctrl3d_set_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_get_height")]
    internal static partial float dse_character_ctrl3d_get_height(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_set_height")]
    internal static partial void dse_character_ctrl3d_set_height(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_get_slope_limit")]
    internal static partial float dse_character_ctrl3d_get_slope_limit(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_set_slope_limit")]
    internal static partial void dse_character_ctrl3d_set_slope_limit(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_get_step_offset")]
    internal static partial float dse_character_ctrl3d_get_step_offset(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_set_step_offset")]
    internal static partial void dse_character_ctrl3d_set_step_offset(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_get_skin_width")]
    internal static partial float dse_character_ctrl3d_get_skin_width(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_set_skin_width")]
    internal static partial void dse_character_ctrl3d_set_skin_width(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_get_min_move_distance")]
    internal static partial float dse_character_ctrl3d_get_min_move_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_character_ctrl3d_set_min_move_distance")]
    internal static partial void dse_character_ctrl3d_set_min_move_distance(uint e, float v);

    // ---- Joint3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_type")]
    internal static partial int dse_joint3d_get_type(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_type")]
    internal static partial void dse_joint3d_set_type(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_connected_entity_id")]
    internal static partial int dse_joint3d_get_connected_entity_id(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_connected_entity_id")]
    internal static partial void dse_joint3d_set_connected_entity_id(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_anchor")]
    internal static partial void dse_joint3d_get_anchor(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_anchor")]
    internal static partial void dse_joint3d_set_anchor(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_connected_anchor")]
    internal static partial void dse_joint3d_get_connected_anchor(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_connected_anchor")]
    internal static partial void dse_joint3d_set_connected_anchor(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_axis")]
    internal static partial void dse_joint3d_get_axis(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_axis")]
    internal static partial void dse_joint3d_set_axis(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_use_limits")]
    internal static partial int dse_joint3d_get_use_limits(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_use_limits")]
    internal static partial void dse_joint3d_set_use_limits(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_lower_limit")]
    internal static partial float dse_joint3d_get_lower_limit(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_lower_limit")]
    internal static partial void dse_joint3d_set_lower_limit(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_upper_limit")]
    internal static partial float dse_joint3d_get_upper_limit(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_upper_limit")]
    internal static partial void dse_joint3d_set_upper_limit(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_min_distance")]
    internal static partial float dse_joint3d_get_min_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_min_distance")]
    internal static partial void dse_joint3d_set_min_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_max_distance")]
    internal static partial float dse_joint3d_get_max_distance(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_max_distance")]
    internal static partial void dse_joint3d_set_max_distance(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_spring_stiffness")]
    internal static partial float dse_joint3d_get_spring_stiffness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_spring_stiffness")]
    internal static partial void dse_joint3d_set_spring_stiffness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_spring_damping")]
    internal static partial float dse_joint3d_get_spring_damping(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_spring_damping")]
    internal static partial void dse_joint3d_set_spring_damping(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_break_force")]
    internal static partial float dse_joint3d_get_break_force(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_break_force")]
    internal static partial void dse_joint3d_set_break_force(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_get_break_torque")]
    internal static partial float dse_joint3d_get_break_torque(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_break_torque")]
    internal static partial void dse_joint3d_set_break_torque(uint e, float v);

    // ---- RagdollComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_get_active")]
    internal static partial int dse_ragdoll_get_active(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_set_active")]
    internal static partial void dse_ragdoll_set_active(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_get_auto_setup")]
    internal static partial int dse_ragdoll_get_auto_setup(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_set_auto_setup")]
    internal static partial void dse_ragdoll_set_auto_setup(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_get_total_mass")]
    internal static partial float dse_ragdoll_get_total_mass(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_set_total_mass")]
    internal static partial void dse_ragdoll_set_total_mass(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_get_joint_stiffness")]
    internal static partial float dse_ragdoll_get_joint_stiffness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_set_joint_stiffness")]
    internal static partial void dse_ragdoll_set_joint_stiffness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_get_joint_damping")]
    internal static partial float dse_ragdoll_get_joint_damping(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_set_joint_damping")]
    internal static partial void dse_ragdoll_set_joint_damping(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_get_collision_layer")]
    internal static partial int dse_ragdoll_get_collision_layer(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_set_collision_layer")]
    internal static partial void dse_ragdoll_set_collision_layer(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_get_collision_mask")]
    internal static partial int dse_ragdoll_get_collision_mask(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ragdoll_set_collision_mask")]
    internal static partial void dse_ragdoll_set_collision_mask(uint e, int v);

    // ---- SoftBodyComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_soft_body_get_enabled")]
    internal static partial int dse_soft_body_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_set_enabled")]
    internal static partial void dse_soft_body_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_get_stiffness")]
    internal static partial float dse_soft_body_get_stiffness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_set_stiffness")]
    internal static partial void dse_soft_body_set_stiffness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_get_solver_iterations")]
    internal static partial int dse_soft_body_get_solver_iterations(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_set_solver_iterations")]
    internal static partial void dse_soft_body_set_solver_iterations(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_get_damping")]
    internal static partial float dse_soft_body_get_damping(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_set_damping")]
    internal static partial void dse_soft_body_set_damping(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_get_use_gravity")]
    internal static partial int dse_soft_body_get_use_gravity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_set_use_gravity")]
    internal static partial void dse_soft_body_set_use_gravity(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_get_gravity_scale")]
    internal static partial float dse_soft_body_get_gravity_scale(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_set_gravity_scale")]
    internal static partial void dse_soft_body_set_gravity_scale(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_get_volume_stiffness")]
    internal static partial float dse_soft_body_get_volume_stiffness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_soft_body_set_volume_stiffness")]
    internal static partial void dse_soft_body_set_volume_stiffness(uint e, float v);

    // ---- VehicleComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_vehicle_get_enabled")]
    internal static partial int dse_vehicle_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_set_enabled")]
    internal static partial void dse_vehicle_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_get_max_engine_force")]
    internal static partial float dse_vehicle_get_max_engine_force(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_set_max_engine_force")]
    internal static partial void dse_vehicle_set_max_engine_force(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_get_max_brake_force")]
    internal static partial float dse_vehicle_get_max_brake_force(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_set_max_brake_force")]
    internal static partial void dse_vehicle_set_max_brake_force(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_get_max_steer_angle")]
    internal static partial float dse_vehicle_get_max_steer_angle(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_vehicle_set_max_steer_angle")]
    internal static partial void dse_vehicle_set_max_steer_angle(uint e, float v);

    // ---- RopeComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_rope_get_enabled")]
    internal static partial int dse_rope_get_enabled(uint e);
